[tool.poetry]
name = "adb-enhanced"
version = "1.0.0"
description = "Swiss-army knife for Android testing and development"
authors = ["Ashish Bhatia"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
sphinx = "^3.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
